migration of chosen news feeds to JS local storage
migration of chosen news feeds to JS local storage

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -129,7 +129,7 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
-Move SELECTED news feeds logic into LOCAL STORAGE (instead of the cookie storage used now), to free up cookie data limits for other data like portfolio tracking. USE THE SAME LOGIC WE JUST USED TO MIGRATE SELECTED PRICE CHARTS
+Find an alternative for alphabetically-ordering news feeds users select in the interface, now that we moved storage to local storage. Maybe since we already alphabetically order it in the SERVER SIDE php array, run some type of comparision against the chosen feed's data keys in local storage in the end-user's browser.
 
 
 Make ajax "wizard steps" logging show in the alerts interface, and consider having any "market" errors be shown only in debugging mode. Maybe only under the condition that an asset search is in-progress, which we already set the global flag $ct['ticker_markets_search'] to know when this is happening. Usually though (IF no asset search is in-progress), we prefer market errors to show in the interface.
